--- a/public/zipsercher.html
+++ b/public/zipsercher.html
@@ -8,7 +8,13 @@
 </head>
 
 <body>
-    <p>ちんぽ</p>
+    <p>郵便番号：<input type="text" class="postalcode" name="" id=""></p>
+    <button class="btn">住所取得</button>
+    <p class="address"></p>
+    <p class="kana"></p>
+    <p class="prefcode"></p>
+    <p class="zipcode"></p>
+    <script src="js/zipsercher.js"></script>
 </body>
 
 </html>
